--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 p{
   
     color: green;
+    <link rel=”stylesheet” media=”screen and (min-width:500px)” href=”main.css”>
   
     font-size: 20px;
     
